# locker

./: .gitignore  meson.build  readme.md
assets/: example.config.toml
include/: auth.h  config.h  draw.h  shared_memory.h  state.h
pam/: locker
src/: auth.c  config.c  draw.c  main.c  shm.c
subprojects/: tomlc17.wrap
subprojects/packagefiles/tomlc17/: meson.build
